reformat cta and headers to be more legible per issue #13

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,19 @@
-.app {
+h1{
+  color: rgb(20, 20, 20);
+  font-size: 10em;
+  line-height: 0.9;
+  margin: 0;
+}
+
+h3{
+  color: rgb(20, 20, 20);
+  font-size: 3em;
+  line-height: 1;
+  margin: 0;
+  margin-left: .25em;
+}
+
+.index {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
@@ -37,6 +52,15 @@ hr {
   border-top: 1px solid #000000;
   margin: 1em 0;
   padding: 0;
+}
+
+.cta-bg-video{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
 }
 
 .member-card {
